--- a/index.html
+++ b/index.html
@@ -1091,10 +1091,10 @@
             </div>
             <!-- 版权信息等 -->
             <div class="copyright">
-                <p>© 2005-2022 冉冉up的新星 版权所有，并保留所有权利。 重庆市万州区重庆三峡学院 Tel: 19115344954 E-mail: ranranup@yeah.net</p>
+                <p>© 2005-2022 冉冉up的新星 版权所有，并保留所有权利。 重庆市xxxx Tel: 191xxxx4954 E-mail: xxxx@yeah.net</p>
                 <a href="javascript:;">
                     <img src="./images/button_old_41.gif" alt="">
-                    2658981151
+                    265898xxxx
                 </a>
                 <a href="javascript:;">
                     <img src="./images/T1B7m.XeXuXXaHNz_X-16-16.gif" alt="">
