--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
                 <li><a href="javascript:;">EngSite</a><span>|</span></li>
                 <li><a href="javascript:;">Contact U</a></li>
             </ul><br>
-            <p class="copyright">地址：重庆市万州区重庆三峡学院 电话：19115344954 邮箱: ranranup@yeah.net <br>
+            <p class="copyright">地址：重庆市xxxx 电话：191xxxx4954 邮箱: xxxx@yeah.net <br>
                 沪ICP备05002918号
             </p>
         </div>
